--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -4,7 +4,7 @@ title: '404 Not Found'
 classes: 'attention-error'
 ---
 
-# 404 Not Found
+# [404 Not Found](https://www.rfc-editor.org/rfc/rfc9110.html#name-404-not-found)
 
 Sorry, the URL does not point to any valid resources.
 
